# MailToTelegramForwarder

./: .dockerignore  .gitignore  Dockerfile  README.md  mailToTelegramForwarder.py  pyproject.toml
systemd/: mail-to-telegram-forwarder@.service
