[project]
name = "mail-to-telegram-forwarder"
version = "0.3"
description = "Fetch mails from IMAP server and forward them to a Telegram chat"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=20.3",
    "imaplib2>=3.6",
    "beautifulsoup4>=4.0",
]

[tool.uv]
package = false
